--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 	<h1>Christopher Turney's Website</h1>
 	<h2>Portfolio</h2>
-	<h2>Link<a  href = "http://www.google.com/maps">To Be Determined</a></h2>
+	<h2><a  href = "http://www.google.com/maps">Link</a></h2>
 	
 </body>
