new portfolio files

--- a/index.html
+++ b/index.html
@@ -1,22 +1,44 @@
-<html>
-<head> 	
-	<title>Christopher Turney's Website</title>
-	<link href='https://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css"   href="/stylesheet.css">
-	<link rel="stylesheet" type="text/css"   href="./stylesheet.css">
-	<script>
-  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
 
-		 ga('create', 'UA-78797052-1', 'auto');
-		 ga('send', 'pageview');
-	</script>
-</head>
-<body>
-	<h1>Christopher Turney's Website</h1>
-	<h2>Portfolio</h2>
-	<h2><a  href = "http://www.google.com/maps">Link</a></h2>
-	
-</body>
+		<title>Christopher Turney</title>
+ 
+		<link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
+  	    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>     
+  	    <link rel="stylesheet" href="css/style.css">
+  
+	</head>
+
+	<body>
+
+		<div class="container">
+			<!-- START HERE --> 
+
+			<h1>Christopher Turney</h1>
+
+			<h2>Aspiring Web Designer</h2>
+			<p>Seeking an opportunity to build enterprise products.
+			</p>
+
+			 
+			
+			<a href="https://github.com/christopherpturney"><img src="images/github.png" alt="github"></a>
+			<a href="https://twitter.com/christurney"><img src="images/twitter.png" alt="twitter"></a>
+			<a href="https://linkedin.com/in/christurney"><img src="images/LinkedIn_logo_initials.png" alt="linkedin"></a>
+			 
+		</div><!-- .container --> 
+
+		<div class = "container">
+			<video width="600" height = "400" controls loop autoplay="autoplay"
+			 src="night_putting.mp4" type="video/mp4"  
+			</video>
+		</div>			
+
+
+			<!-- END HERE --> 
+		
+
+	</body>
+</html>
