--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
 
 			<h1>Christopher Turney</h1>
 
-			<h2>Aspiring Web Designer</h2>
-			<p>Seeking an opportunity to build enterprise products.
-			</p>
-
-			 
+			<h2>Startup Institute Spring 2016</h2>
+			<p>Seeking an opportunity to build transformative enterprise products.
+			</p>			 
 			
 			<a href="https://github.com/christopherpturney"><img src="images/github.png" alt="github"></a>
 			<a href="https://twitter.com/christurney"><img src="images/twitter.png" alt="twitter"></a>
@@ -31,9 +29,14 @@
 		</div><!-- .container --> 
 
 		<div class = "container">
-			<video width="600" height = "400" controls loop autoplay="autoplay"
+			<!--
+			<video width="600" height = "350" controls loop autoplay="autoplay"
 			 src="night_putting.mp4" type="video/mp4"  
 			</video>
+			-->
+
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/IPoKd0YUgfM" frameborder="0" allowfullscreen></iframe>
+
 		</div>			
 
 
