--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 			 
 		</div><!-- .container --> 
 
-		<div class = "container">
-			<!--
+	<!-- 	<div class = "container">
+			
 			<video width="600" height = "350" controls loop autoplay="autoplay"
 			 src="night_putting.mp4" type="video/mp4"  
 			</video>
-			-->
+			
 
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/IPoKd0YUgfM" frameborder="0" allowfullscreen></iframe>
 
-		</div>			
+		</div>	 -->		
 
 
 			<!-- END HERE --> 
