--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 			<h1>Christopher Turney</h1>
 
-			<h2>Startup Institute Spring 2016</h2>
+			<h2>Startup Institute Summer 2016</h2>
 			<p>Seeking an opportunity to build transformative enterprise products.
 			</p>			 
 			
