--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 
-		<div class="container">
+		<div class="container  element-animation">
 			<!-- START HERE --> 
 
 			<h1>Christopher Turney</h1>
