--- a/timeline.html
+++ b/timeline.html
@@ -13,6 +13,9 @@ mixpanel.init("b32705f8d9391c6e22aa9e882690161d");</script><!-- end Mixpanel -->
 </head>
 
 <body>
+	<script type="text/javascript">
+		mixpanel.track("message!")
+	</script>
 	<div class = mainContainer >
 		<div class="container">
 			<div class="row">
