--- a/timeline.html
+++ b/timeline.html
@@ -283,6 +283,12 @@ mixpanel.init("b32705f8d9391c6e22aa9e882690161d");</script><!-- end Mixpanel -->
 						</div>
 				</div></div> -->
 			</div> <!-- end timeline list -->
+
+			<div>
+				 <button type="button" class="btn btn-default" aria-label="Add">  <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+				 </button>
+			</div>
+
 		</div>     <!-- end timeline container -->
 	</div>
 
