--- a/EnhatchImporter/index.html
+++ b/EnhatchImporter/index.html
@@ -8,7 +8,7 @@
  
 </head>
 <body>
-
+	<script src="//fast.appcues.com/19126.js"></script>
 	<div class = header>
 		<div class = header-row-1>
 			<img class = logo src="images/logo.png">
@@ -50,6 +50,20 @@
 
 	</div>
 
+		<script>
+			    // TODO: Replace the placeholders below with values for the current user.
+			    // The installation will not work until that is done.
+			    Appcues.identify("12345", { // Unique identifier for current user
+			        name: "John Doe", // Current user's name
+			        email: "john.doe@example.com", // Current user's email
+			        created_at: 1234567890, // Unix timestamp of user signup date
 
+			        // Additional user properties.
+			        // is_trial: false,
+			        // plan: "enterprise"
+			    });
+		</script>
+
+ ?hey_appcues
 </body>
 </html>
