--- a/index.html
+++ b/index.html
@@ -161,30 +161,30 @@
                 </div>
             </div>
             <div class="row text-center ">
-                <div class="col-lg-4 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover-light skill-tile-first">
+                <div class="col-lg-4 col-lg-offset-0 col-xs-10 col-xs-offset-1 white-text-hover-light skill-tile-first">
                     <h4>Full-lifecycle software development experience</h4>
                     <p>Custom Development & SaaS/On-Premise Integrations</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover-light skill-tile">
+                <div class="col-lg-4 col-lg-offset-0 col-xs-10 col-xs-offset-1  white-text-hover-light skill-tile">
                     <h4>Excellent communication skills in customer-facing roles</h4>
                     <p>Translate technical concepts to non-technical audiences </p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover-light skill-tile">
+                <div class="col-lg-4 col-lg-offset-0 col-xs-10 col-xs-offset-1  white-text-hover-light skill-tile">
                     <h4>Analytical and data-driven</h4>
                     <p>Comfortable with super complex data sets, SQL expert</p>
                 </div>
                 <!-- Optional: clear the XS cols if their content doesn't match in height -->
                 <div class="clearfix visible-lg-block"></div>
 
-                <div class="col-lg-4 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover-light skill-tile">
+                <div class="col-lg-4 col-lg-offset-0 col-xs-10 col-xs-offset-1  white-text-hover-light skill-tile">
                     <h4>Strong working knowledge of HTML, CSS, & JavaScript</h4>
                     <p>Can turn wireframes into working prototypes, & grasp existing code</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover-light skill-tile">
+                <div class="col-lg-4 col-lg-offset-0 col-xs-10 col-xs-offset-1  white-text-hover-light skill-tile">
                     <h4>Organized and detail-oriented</h4>
                     <p>JStrong project management skills and experience presenting to leadership</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover-light skill-tile">
+                <div class="col-lg-4 col-lg-offset-0 col-xs-10 col-xs-offset-1  white-text-hover-light skill-tile">
                     <h4>Willingness to turn chaos into order</h4>
                     <p>Not afraid to take action when there is a need for structure and direction</p>
                 </div>
@@ -283,25 +283,25 @@
                 </div>
             </div>
             <div class="row text-center ">
-                <div class="col-lg-2 col-lg-offset-1 col-xs-8 col-xs-offset-2 white-text-hover skill-tile-first">
+                <div class="col-lg-2 col-lg-offset-1 col-xs-10 col-xs-offset-1 white-text-hover skill-tile-first">
                     <a href="#portfolioModal_arsenal" class="arsenal-link white-text-hover" data-toggle="modal">
                         <h4>Soccer<br />Fan</h4>
                         <p>The spikes are hung up, now I just watch every Saturday morning… and Sundays</p>
                     </a>
                 </div>
-                <div class="col-lg-2 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover skill-tile">
+                <div class="col-lg-2 col-lg-offset-0 col-xs-10 col-xs-offset-1 white-text-hover skill-tile">
                     <h4>OK<br />Golfer</h4>
                     <p>Still trying to match my low score from when I was 17</p>
                 </div>
-                <div class="col-lg-2 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover skill-tile">
+                <div class="col-lg-2 col-lg-offset-0 col-xs-10 col-xs-offset-1 white-text-hover skill-tile">
                     <h4>Beginner Tailor</h4>
                     <p>Learning how to sew, one destroyed blazer at a time</p>
                 </div>
-                <div class="col-lg-2 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover skill-tile">
+                <div class="col-lg-2 col-lg-offset-0 col-xs-10 col-xs-offset-1 white-text-hover skill-tile">
                     <h4>Occasional Artist</h4>
                     <p>My favorite medium is paper and pencil, ask me about my work</p>
                 </div>
-                <div class="col-lg-2 col-lg-offset-0 col-xs-8 col-xs-offset-2 white-text-hover skill-tile">
+                <div class="col-lg-2 col-lg-offset-0 col-xs-10 col-xs-offset-1 white-text-hover skill-tile">
                     <h4>Tinkerer & Builder</h4>
                     <p>Just waiting for the day when I can have a garage of my own to build cool stuff</p>
                 </div>
@@ -420,7 +420,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Data Importer for Enhatch Inventory Management</h2>
+                            <h2>Data Importer for Enhatch Control</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/enhatch.png" class="img-responsive img-centered" alt="">
                             <h3>Background</h3>
@@ -496,7 +496,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>UX/UI Design for Travel Platform</h2>
+                            <h2>Product Design for Social Travel Platform</h2>
                             <hr class="star-primary">
                             
                             <h4>A platform for individuals to build elegant itineraries and share with the community.</h4>
@@ -518,7 +518,9 @@
                             <br />
                             <div class="row">
                                 <h4>High-Fidelity Wireframes</h4>
+                                <h5>Landing Page</h5>
                                 <img src="img/modals/LandingPage.jpeg" class="img-responsive img-centered" alt="">
+                                <h5>View Itinerary</h5>
                                 <img src="img/modals/TravelrViewTrip.png" class="img-responsive img-centered" alt="">
                             </div>
                             <h3>MVP Feedback</h3>
@@ -890,7 +892,7 @@
                             <h3>Results</h3>
                             <p>The fully implemented Workforce Management Product  improved the efficiency of the division, reducing resource downtime and  limiting over-allocation by providing increased visibility. The final product also integrated tightly with HR systems, and allowed specific workflows and dashboards for Resource Managers (to see what their team is working on) and Project Managers (to request for specific resources at the right time).</p>
                             <p></p>
-
+                            <br /><br /><br /><br />    
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>n/a
