--- a/index.html
+++ b/index.html
@@ -757,22 +757,22 @@
                             <div class="row">
                                 <h3>MVP Process</h3>
                                 <div class = "col-md-6 col-xs-12 twohundred">
-                                    <img class = "img-responsive mvp" src = "img/modals/GamificationMVP1.PNG">
+                                    <img class = "img-responsive mvp" src = "img/modals/GamificationMVP1.png">
                                     <h4>Research</h4>
                                     <p>Determine Which Tests Could be Run by Querying DB</p>
                                 </div>
                                 <div class = "col-md-6 col-xs-12 twohundred">
-                                    <img class = "img-responsive mvp"src = "img/modals/GamificationMVP2.PNG">
+                                    <img class = "img-responsive mvp" src = "img/modals/GamificationMVP2.png">
                                     <h4>Define</h4>
                                     <p>Specify Exact Details of Each Test (Users Should Know All Rules</p>
                                 </div>
                                 <div class = "col-md-6 col-xs-12 twohundred">
-                                    <img class = "img-responsive mvp"src = "img/modals/GamificationMVP3.PNG">
+                                    <img class = "img-responsive mvp" src = "img/modals/GamificationMVP3.png ">
                                     <h4>Design MVP in Excel</h4>
                                     <p>Embed DB Queries in Excel & Filter Based on UserID</p>
                                 </div>
                                 <div class = "col-md-6 col-xs-12 twohundred">
-                                    <img class = "img-responsive mvp"src = "img/modals/GamificationMVP4.PNG">
+                                    <img class = "img-responsive mvp" src = "img/modals/GamificationMVP4.png">
                                     <h4>Final MVP</h4>
                                     <p>Embed Excel in Existing Page (users don’t know it’s Excel)</p>
                                 </div>
