--- a/index.html
+++ b/index.html
@@ -8,24 +8,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Christopher Turney's Portfolio</title>
-    <meta name="description" content="A site summarize my work, skills, and experience.">
+    <meta name="description" content="A site that summarizes my work, skills, and experience.">
     <meta name="author" content="Christopher Turney">
     
-    <meta property="og:description" content="A site summarize my work, skills, and experience.">
+    <meta property="og:description" content="A site that summarizes my work, skills, and experience.">
     <meta property="og:title" content="Christopher Turney's Portfolio">
     <meta property="og:site_name" content="Christopher Turney">
     <meta property="og:url" content="http://www.christopherturney.com">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="img/me.png">
-
-
+    <meta property="og:image" content="http://www.christopherturney.com/img/me.png">
 
     <link rel="shortcut icon" type="image/x-icon" href="img/christopha246revwhiteimage.png" />
 
-
     
-
-
     <!-- Bootstrap Core CSS -->
     <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Latest compiled and minified CSS -->
