--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="img/christopha246revwhiteimage.png" />
 
-    
+
     <!-- Bootstrap Core CSS -->
     <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Latest compiled and minified CSS -->
@@ -190,7 +190,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-0 col-xs-10 col-xs-offset-1  white-text-hover-light skill-tile">
                     <h4>Organized and detail-oriented</h4>
-                    <p>JStrong project management skills and experience presenting to leadership</p>
+                    <p>Strong project management skills and experience presenting to leadership</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-0 col-xs-10 col-xs-offset-1  white-text-hover-light skill-tile">
                     <h4>Willingness to turn chaos into order</h4>
@@ -435,15 +435,16 @@
                             <p>Enhatch, a company with a leading mobile enterprise sales platform, has an Inventory Management product called <em>Control</em>. After acquiring new users, the Enhatch team assists users in migrating inventory data from their existing systems into <em>Control</em>. This required effort from the customer success team and there wasn't a current method of allowing Enhatch customers to upload their own data.</p>
 
                             <h3>Project</h3>
-                            <p>My team was tasked with designing and developing a data import module for<em>Control</em> that would allow customers to follow an easy workflow to upload, map, and validate the inventory data.</p>
+                            <p>My team was tasked with designing and developing a data import module for <em>Control</em> that would allow customers to follow an easy workflow to upload, map, and validate the inventory data.</p>
 
                             <h3>Approach</h3>
-                            <p>To start, we learned about the users. A big part of the discovery was that it takes customers a while to collect their current data. Also, the product should be easy enough for a average-proficiency computer user to navigate.</p>
+                            <p>To start, we learned about the users. The first thing we discovered was that it takes customers a while to collect their current data. Also, the product should be easy enough for an average-proficiency computer user to navigate.</p>
 
                             <h3>Design</h3>
-                            <p>After understanding our customers, the two most important tenants of the design were to make it clear to the users where they were in the workflow. Also, reminders and helpful hints along the way would help keep customers engaged.</p>
+                            <p>After understanding our customers, the two most important tenants of the design were to make it clear to the users where they were in the workflow and to provide reminders and helpful hints along the way, helping to keep customers engaged.</p>
+
                             <p>We started with designing wireframes, testing out the best way to show users how to navigate.</p>
-                            <p>Multiple types of data (Contacts, Products, Inventory) needed to be uploaded. Each object needed to be uploaded, mapped to <em>Control</em> fields, and valided for errors before being saved. The initial design kept this consistent for each object.</p>
+                            <p>Multiple files containing each object (Contacts, Products, Inventory) needed to be imported. Each object needed to be uploaded, mapped to Control fields, and validated for errors before being saved. The initial design kept these steps consistent for each object.</p>
 
                             <div class="row">
                                 <h3>Low-Fidelity Wireframes</h3>
@@ -515,14 +516,14 @@
                             </div>
                             <h3>Product Vision</h3>
                             <p>How do you typically plan a trip? Navigate to multiple blogs and travel websites to get ideas? Search kayak to get the best flights? Look on Google Maps to see how far you'll need to drive to each stop?</p>
-                            <p>This is all to common. Even if you are asking your friends and family for recommendations, they will give you great advice but you'll still have to do all the detailed planning. 
-                            <p><em>Travelr</em> is a product that will allow you to easily build an itinerary and share it with friends or members of the community. You will be able to see trips of others, modify your version of their trip, and browse entire trips that align with your tastes (not just individual places).
+                            <p>This is all too common. Even if you are asking your friends and family for recommendations, they may give you great advice, but you'll still have to do all the detailed planning. 
+                            <p><em>Travelr</em> is a product that will allow you to easily build an itinerary and share it with friends or members of the community. You will be able to see trips posted by members of the community, modify your version of their trip, and browse entire trips that align with your tastes.</p>
 
                             <h3>User Research</h3>
-                            <p> We've all heard the famous Steve Blank quote that "no product survives first contact with customer", so the first step is to go out and test the hypothesis that this type of product would be desirable.</p>
+                            <p>We've all heard the famous Steve Blank quote that "no product survives first contact with customer", so the first step is to go out and test the hypothesis that this type of product would be desirable.</p>
 
                             <h3>MVP Design</h3>
-                            <p>The next step after the initial hypothesis are validated through customer interviews is to build an MVP and get it in front of users. The initial features will include the ability to add a trip and view other trips from the community</p>
+                            <p>The next step after the initial hypothesis are validated through customer interviews is to build an MVP and get it in front of users. The initial features will include the ability to add a trip and view trips posted by members of the community.</p>
                             <br />
                             <div class="row">
                                 <h4>High-Fidelity Wireframes</h4>
@@ -753,11 +754,11 @@
                             <h3>Background</h3>
                             <p>My client (an IT division of a Fortune 500 company) struggled with getting valuable information out of their Project Portfolio Management (PPM) software. <em>(PPM = think of a project management tool you've used, then scale it to a portfolio of 300+ active projects in a 2000-person division).</em>  The purpose of the software is to answer key questions for department leadership. Specifically, it was designed to answer where the company was investing in projects, how projects were progressing, and how to prioritize new projects. </p>
                             <h3>Complication</h3>
-                            <p>These key questions can't be answered if the underlying data is bad, and the 200+ Project Managers in the division were the ones relied upon to keep this data up to date and accurate. (Imagine trying to understand your burn rate, if your financials haven't been updated in two months?) How do we encourage/insist/mandate our users to do this?</p>
+                            <p>These key questions can't be answered if the underlying data is bad, and the 200+ Project Managers in the division were the ones relied upon to keep this data up to date and accurate. <em>(Imagine trying to understand your burn rate, if your financials haven't been updated in two months?)</em> How do we encourage/insist/mandate our users to do this?</p>
                             <h3>Action</h3>
-                            <p>There are many techniques to encourage action, including the carrot and stick techniques that are all too common. It was the emerging trend of "gamification", and it's application in non-traditional game situations, that caught my attention. I decided to pilot something in my free time. </p>
+                            <p>There are many techniques to encourage action, including the carrot and stick techniques that are all too common. It was the emerging trend of "gamification", and its application in non-traditional game situations, that caught my attention. I decided to pilot something in my free time. </p>
                             <h3>MVP</h3>
-                            <p>First, I logged down all the "rules" for the game (everything that Project Managers were supposed to do). Then, I researched how well these rules were being followed by writing SQL queries to pull the results of testing each of these "rules" for every Project in our system. </p>
+                            <p>First, I logged down all the "rules" for the game (everything that Project Managers were supposed to do). Then, I researched how well these rules were being followed by writing SQL queries to pull the results of testing each of these "rules" for every project in our system. </p>
                             <p></p>
                             <p>For my MVP, I loaded these results into excel and created a basic UI to plug into a webpage, so that users wouldn't even know that an Excel file was under the hood. I had to manually re-run the SQL queries and upload the Excel file each day, but it was fine for the first month.</p>
                             
@@ -767,33 +768,34 @@
                                 <div class = "col-md-6 col-xs-12 twohundred">
                                     <img class = "img-responsive mvp" src = "img/modals/GamificationMVP1.png">
                                     <h4>Research</h4>
-                                    <p>Determine Which Tests Could be Run by Querying DB</p>
+                                    <p>Determine Which Tests Could Be Run by Querying DB</p>
                                 </div>
                                 <div class = "col-md-6 col-xs-12 twohundred">
                                     <img class = "img-responsive mvp" src = "img/modals/GamificationMVP2.png">
                                     <h4>Define</h4>
-                                    <p>Specify Exact Details of Each Test (Users Should Know All Rules</p>
+                                    <p>Specify Exact Details of Each Test (Users Should Know All Rules)</p>
                                 </div>
                                 <div class = "col-md-6 col-xs-12 twohundred">
                                     <img class = "img-responsive mvp" src = "img/modals/GamificationMVP3.png ">
                                     <h4>Design MVP in Excel</h4>
-                                    <p>Embed DB Queries in Excel & Filter Based on UserID</p>
+                                    <p>Embed DB Queries in Excel & Filter Based on User ID</p>
                                 </div>
                                 <div class = "col-md-6 col-xs-12 twohundred">
                                     <img class = "img-responsive mvp" src = "img/modals/GamificationMVP4.png">
                                     <h4>Final MVP</h4>
-                                    <p>Embed Excel in Existing Page (users don’t know it’s Excel)</p>
+                                    <p>Embed Excel in Existing Page (Users Don’t Know it’s Excel)</p>
                                 </div>
                             </div>
 
                             <h3>Initial Feedback</h3>
-                            <p>Users liked the "game" concept and the initial feedback was that users wanted to see how they stacked up against their peers. This led to the creation of a ”Leaderboard” MVP, also designed and implemented in the same fashion. </p>
+                            <p>Users liked the "game" concept and the initial feedback was that users wanted to see how they stacked up against their peers. This led to the creation of a "Leaderboard" MVP, also designed and implemented in the same fashion. </p>
                             <h3>Outcomes</h3>
                             <p>The result was a resounding success! After one month, a simple statistic of "# of users providing status updates each week" improved 50%. </p>
                             <p></p>
                             <p>Our client liked the idea, and approved us to move forward and have our Dev team build out real-time web-based reports to replace my daily manual Excel updates.  3 months later, over 50 Project Managers had 100% scores, while at the beginning, 0 did.  </p>
                             <p></p>
                             <p>In game design, it is vital to keep players challenged, but also give them continuous achievement. To keep players (users) in this area of “flow”, the game must keep getting harder. Each month, new rules were researched and added, to keep players interested in the game. </p>
+                            <br /> <br /> <br />
 
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -832,7 +834,7 @@
                             <h2>Workforce Management</h2>
                             <hr class="star-primary">
                             <h3>Background</h3>
-                            <p>With a workforce of over 3,000 resources (employees) and 500 active projects, my client's IT division could not keep track and prioritize all of these assignments with old-fashioned manual methods. Over-allocations, mix-ups, and downtime between projects caused many issues; projects were delayed waiting for a critical resource, other individuals sat idle waiting for their next assignment, and leadership could not predict what type of skills were required for their recruiting efforts 6 months to 12 months from now. </p>
+                            <p>With a workforce of over 3,000 resources (employees) and 500 active projects, my client's IT division could not keep track and prioritize all of these assignments with old-fashioned manual methods. Over-allocations, mix-ups, and downtime between projects caused many headaches. Projects were delayed waiting for a critical resource, other individuals sat idle waiting for their next assignment, and leadership could not predict what type of skills were required for their 6-12 month recruiting horizon.</p>
                             <p></p>
                             <p>My team's assignment to revamp resource management practices and replace a home grown tool with a solution that tightly integrates with their enterprise project management and HR systems. </p>
                             <h3>Design Approach</h3>
